deploy/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ews
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ews
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: ews
    spec:
      containers:
        # Run ews (keep stand alone)
        - image: docker.hcllabs.net/ews:latest
          imagePullPolicy: Always
          #Uncomment to override default entry point
          #command: [ "/bin/bash", "-c", "trap : TERM INT; sleep infinity & wait" ]
          name: ews
          readinessProbe:  
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 20
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          requests:
            cpu: "1"
          limits:
            cpu: "1.5"
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
