deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ews
  name: ews
spec:
  path: /
  port:
    targetPort: 3000-ews
  to:
    kind: Service
    name: ews
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
      routerName: router
      wildcardPolicy: None
